# Capstone.W22.TWT.Anthony

./: .gitignore  Cargo.toml  main.ts  package-lock.json  package.json  readme.md
Cluster3boilerPlate/: Cargo.toml
Cluster3boilerPlate/contracts/cw_template/: Cargo.toml
Cluster3boilerPlate/contracts/cw_template/examples/: schema.rs
Cluster3boilerPlate/contracts/cw_template/src/: contract.rs  execute.rs  msg.rs  query.rs  state.rs
artifacts/: campaign.wasm  checksums.txt  checksums_intermediate.txt  factory.wasm
boiler-plate/: Cargo.toml
boiler-plate/contracts/dummy-a/: Cargo.toml
boiler-plate/contracts/dummy-a/src/: contract.rs  msg.rs  query.rs
boiler-plate/contracts/dummy-b/: Cargo.toml
boiler-plate/contracts/dummy-b/.cargo/: config
boiler-plate/contracts/dummy-b/src/: contract.rs  error.rs  execute.rs  msg.rs  state.rs
boilerplate/: Cargo.toml  NOTICE
boilerplate/examples/: schema.rs
boilerplate/src/: contract.rs
clusterTwo/: package-lock.json  package.json
clusterTwo/contracts/clusterTwo/: Cargo.toml
clusterTwo/contracts/clusterTwo/examples/: schema.rs
clusterTwo/contracts/clusterTwo/src/: contract.rs
clusterTwo/frontend/: package-lock.json  package.json
clusterTwo/frontend/src/: App.tsx
clusterTwo/lib/: index.ts
contracts/campaign/: Cargo.toml
contracts/campaign/examples/: schema.rs
contracts/campaign/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/campaign/src/: contract.rs  error.rs  execute.rs  helper.rs  lib.rs  msg.rs  reply.rs  state.rs
contracts/campaign_receipt/: Cargo.toml
contracts/campaign_receipt/examples/: schema.rs
contracts/campaign_receipt/schema/: execute_msg_for__metadata.json  query_msg_for__metadata.json
contracts/campaign_receipt/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs
contracts/factory/: Cargo.toml
contracts/factory/examples/: schema.rs
contracts/factory/schema/: execute_msg.json  query_msg.json
contracts/factory/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  reply.rs  state.rs
deposit-native-cw20/: .gitignore  Cargo.toml
deposit-native-cw20/contracts/cw20/: Cargo.toml
deposit-native-cw20/contracts/cw20/src/: contract.rs
deposit-native-cw20/contracts/deposit-cw20/: Cargo.toml
deposit-native-cw20/contracts/deposit-cw20/examples/: schema.rs
deposit-native-cw20/contracts/deposit-cw20/schema/: deposit_response.json  deposits.json  execute_msg.json  offers_response.json  query_msg.json
deposit-native-cw20/contracts/deposit-cw20/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
deposit-native-cw20/contracts/nft/: Cargo.toml
deposit-native-cw20/contracts/nft/src/: contract.rs  helpers.rs  lib.rs
integration_tests/types/: Campaign.client.ts  Campaign.types.ts  Factory.client.ts  Factory.types.ts  Receipt.client.ts  Receipt.types.ts  index.ts
integration_tests/utils/: query.ts  setup.ts
scripts/: codegen.ts  mains.ts  optimize.sh  package.json
scripts/integration_tests/utils/: helper.ts  math.ts
