[workspace]
members = [
	"contracts/*"
	]
exclude = ["ci/configs/"]

[profile.release.package.factory]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-utils = "0.16"
thiserror = { version = "1.0.30" }
cw-storage-plus = "0.16"
cw2 = "0.16"
cw20 = "0.16"
cw721 = "0.16"
cw20-base = "0.16"
cw-core-v1 = { package = "cw-core", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }
cw-multi-test = "0.16"
cw721-base = "0.16"
cw-controllers = "0.16"
anyhow = { version = "1.0.51"}
cw4-group = "0.16"
rand = "0.8"
cw4 = "0.16"
cw3 = "0.16"
indexmap = "1.9"
serde = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
cw-utils-v1 = {package = "cw-utils", version = "0.13"}
