[workspace]
members = ["packages/*", "contracts/*"]
exclude = ["ci/configs/"]

[workspace.package]
version="0.1.0"
edition       = "2021"


[profile.release.package.factory]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-schema = { version ="1.0.0" }
cw2 = "0.16"
cw20 = "0.16"
cw4 = "0.16"
cw3 = "0.16"
cw721 = "0.16"
cw20-base = "0.16"
cw721-base = "0.16"
cw-storage-plus = "0.16"
cw-utils = "0.16"


serde = "1.0"
schemars="0.8"
proc-macro2 = "1.0"
thiserror = { version = "1.0.30" }
