[workspace]
members = ["packages/*", "contracts/external/*","contracts/campaign","contracts/factory","contracts/campaign_receipt"]
exclude = ["ci/configs/"]

[workspace.package]
version="0.1.0"
edition       = "2021"


[profile.release.package.factory]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-schema = { version ="1.0.0" }
cw2 = "0.16"
cw20 = "0.16"
cw4 = "0.16"
cw3 = "0.16"
cw721 = "0.16"
cw20-base = "0.16"
cw721-base = "0.16"
cw-storage-plus = "0.16"
cw-utils = "0.16"

# One commit ahead of version 0.3.0. Allows initialization with an
# optional owner.
cw-ownable = { git = "https://github.com/steak-enjoyers/cw-plus-plus", rev = "50d4d9333305894457e5028072a0465f4635b15b" }

serde = "1.0"
schemars="0.8"
proc-macro2 = "1.0"
thiserror = { version = "1.0.30" }

# vesting deps
cw-denom = { path = "./packages/cw-denom"}
cw-vesting = { path = "./contracts/external/cw_vesting" }
cw-multi-test = "0.16"
wynd-utils = "0.4.1"
cw-paginate="0.2.0"
