# Add package in member once necessary
[workspace]
members = ["contracts/*"]
resolver = "2"


[workspace.dependencies]
cosmwasm-std = "1.1.6"
cosmwasm-storage = "1.1.6"
cw-storage-plus = "1.0.1"
cw2 = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
# cosmwasm-schema = "1.0.0"

# [workspace.dev-dependencies]
# cw-multi-test = "0.16.1"


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[profile.release.package.cw_template]
codegen-units = 1
incremental = false