[workspace]
members = ["contracts/*"]

[workspace.package]
name = "boiler-plate"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cosmwasm-schema  = "1.1.8"
cosmwasm-std     = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus  = "1.0.0"
cw-utils         = "1.0.0"
cw-controllers   = "1.0.0"
cw2              = "1.0.0"
schemars         = "0.8.11"
serde            = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror        = "1.0.37"


[profile.release.package.dummy-b]
codegen-units = 1
incremental = false

[profile.release.package.dummy-a]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false