[package]
name = "campaign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }

cw2 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw20-base= { workspace = true }
cw721-base = { workspace = true, features = ["library"]}
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw-denom = { workspace = true }
wynd-utils = { workspace = true }

thiserror = { workspace = true }

factory = {path="../factory", features = ["library"]}
campaign_receipt = { path="../campaign_receipt"}

cw-payroll-factory = {path="../external/cw_payroll_factory", features = ["library"]}
cw-vesting = {path="../external/cw_vesting", features = ["library"]}
