[package]
name = "cw_template"
authors = ["Cangui"]
edition = "2018"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = {workspace = true,version = "1.1.6"}
cosmwasm-storage = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
# cosmwasm-schema = {workspace = true, version = "1.1.0"}
