[package]
name = "dummy-a"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema  = {workspace = true}
cosmwasm-std     = {workspace = true}
cosmwasm-storage = {workspace = true}
cw-storage-plus  = {workspace = true}
cw-utils         = {workspace = true}
cw-controllers   = {workspace = true}
cw2              = {workspace = true}
schemars         = {workspace = true}
serde            = {workspace = true}
thiserror        = {workspace = true}

